--- a/roles/server-kube/templates/kubeadm/init/clusterconfig.yaml.j2
+++ b/roles/server-kube/templates/kubeadm/init/clusterconfig.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
 certificatesDir: /etc/kubernetes/pki
 clusterName: kubernetes
-controlPlaneEndpoint: {{ kubernetes.address }}:{{ kubernetes.bindPort }}
+controlPlaneEndpoint: {{ kubernetes.endpoint }}
 imageRepository: k8s.gcr.io
 kubernetesVersion: v1.18.0
 apiServer:
