--- a/roles/server-kube/templates/kubeadm/join/discovery.yaml.j2
+++ b/roles/server-kube/templates/kubeadm/join/discovery.yaml.j2
@@ -1,6 +1,6 @@
 discovery:
   bootstrapToken:
-    apiServerEndpoint: {{ kubernetes.address }}:{{ kubernetes.bindPort }}
+    apiServerEndpoint: {{ kubernetes.endpoint }}
     token: {{ kubeadm.token }}
     unsafeSkipCAVerification: true
   timeout: 5m0s
